test/files/neg/pat_unreachable.check
pat_unreachable.scala:5: error: unreachable code
    case Seq(x, y, z, w) => List(z,w) // redundant!
                                ^
pat_unreachable.scala:9: error: unreachable code
    case Seq(x, y) => List(x, y)
                          ^
pat_unreachable.scala:23: error: unreachable code
    case c => println("matched c")
                     ^
pat_unreachable.scala:24: error: unreachable code
    case _ => println("matched neither")
                     ^
four errors found
